test/domains/diten/castAwayStridableDomain.good
before cast/assign unstridableDom={1..10}
before cast/assign stridableDom={1..20 by 2}
after cast/assign unstridableDom={1..20}
after cast/assign stridableDom={1..20 by 2}
castAwayStridableDomain.chpl:38: error: halt reached - bad cast from stride 2 to strideKind.one
